--- a/proyecto_voluntariado/template/ong_profile.html
+++ b/proyecto_voluntariado/template/ong_profile.html
@@ -26,7 +26,7 @@
 				{% endfor %}
 				</tbody>
 			</table>
-			
+			<br>
 			<h1>Favoritos</h1>
 			<table class="table table-striped">
 				<thead>
@@ -44,7 +44,7 @@
 					{% endfor %}
 				</tbody>
 			</table>
-			
+			<br>
 			<h1>Proyectos</h1>
 			<table class="table table-striped">
 				<thead>
@@ -62,6 +62,7 @@
 				{% endfor %}
 				</tbody>
 			</table>
+			<input value="Agregar proyecto" onClick="location.href='nuevoproyecto'" type="button" class="btn btn-primary">
 		</div>
 	</div>
 </div>
