--- a/proyecto_voluntariado/template/proyecto.html
+++ b/proyecto_voluntariado/template/proyecto.html
@@ -35,8 +35,9 @@
 					{% endfor %}
 				</tbody>
 			</table>
+			<input value="Agregar puesto" onClick="location.href='nuevopuesto'" type="button" class="btn btn-primary">
 		</div>
 	</div>
-	<a href="../../ong/{{proyecto.organizacion.user.id}}">Regresar</a>
+	<input value="Regresar" onClick="location.href='../../ong/{{proyecto.organizacion.user.id}}'" type="button" class="btn btn-primary">
 </div>
 {% endblock %}
