Realizado el perfil de voluntario y ong, falta la unión de los módulos e interfaz para empresas

--- a/proyecto_voluntariado/template/main.html
+++ b/proyecto_voluntariado/template/main.html
@@ -7,8 +7,8 @@
 	</a>
 	<ul class="dropdown-menu">
 	<li><a href="/nuevovoluntario/" >Voluntario</a></li>
-	<li><a href="/intereses/1/" >Organización</a></li>
-	<li><a href="/intereses/2/" >Empresa Privada</a></li>
+	<li><a href="/nuevaorg/" >Organización</a></li>
+	<li><a href="/nuevaempresa/" >Empresa Privada</a></li>
 	</ul>
 </li>
 <li><a href="/contact/">Contacto</a></li>
