--- a/proyecto_voluntariado/template/contact.html
+++ b/proyecto_voluntariado/template/contact.html
@@ -1,15 +1,15 @@
 {% extends 'index.html' %}
 
 {% block panel %}
-              <li><a href="../">Inicio</a></li>
-              <li><a href="../about/">Acerca de</a></li>
-              <li class="active" ><a href="../contact/">Contáctanos</a></li>
+              <li><a href="/main/">Inicio</a></li>
+              <li><a href="/about/">Acerca de</a></li>
+              <li class="active" ><a href="/contact/">Contáctanos</a></li>
 {% endblock %}
 
 {% block principal %}
       <div class="hero-unit">
         <h1>Contáctanos</h1>
         <p>Acerca de los contactos</p>
-		<p><a href = "../"class="btn btn-primary btn-large">Inicio &raquo;</a></p>	
+		<p><a href = "/main/"class="btn btn-primary btn-large">Inicio &raquo;</a></p>	
       </div>
 {% endblock %}              
