Agregado botón de salir de formulario de nuevos perfiles

--- a/proyecto_voluntariado/template/new_org.html
+++ b/proyecto_voluntariado/template/new_org.html
@@ -37,6 +37,18 @@
 			</div>
 		</div>
 		<button type="submit" class="btn btn-primary">Guardar</button>
+		<a href="#salir" class="btn" role="button" data-toggle="modal">Cancelar</a>
+		
+		<div class="modal hide fade" id="salir" tabindex = "-1" role="dialog" aria-labelledby="nuevoInteresLabel" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">¿Seguro que deseas cancelar? Se perderán todos los datos</h3>
+			</div>
+			<div class="modal-footer">
+				<button data-dismiss="modal" class="btn btn-primary" aria-hidden="true">Seguir en la página</button>
+				<a href="/main/" role="button" class="btn" >Salir</a>
+			</div>
+		</div>
 		
 		
 		
