--- a/proyecto_voluntariado/template/new_volunteer.html
+++ b/proyecto_voluntariado/template/new_volunteer.html
@@ -24,10 +24,6 @@
 			<label class="control-label">{{i.label}}</label> <div class="controls">{{ i }} <p class="help-block">{% autoescape off %}{{i.help_text }} {% endautoescape %}</p> {{i.errors}} </div>
 		</div>
 		{% endfor %}
-		<div id="div_pass" class="control-group">
-			<label class="control-label">Reescriba su contraseña</label> <div class="controls"><input type="password" id="verif_pass"/> <p id="help_pass" class="help-block"></p></div>
-		</div>
-		
 		<br><br>
 		<div class="modal hide fade" id="nuevoInteres" tabindex = "-1" role="dialog" aria-labelledby="nuevoInteresLabel" aria-hidden="true">
 			<div class="modal-header">
@@ -42,7 +38,21 @@
 				<button data-dismiss="modal" class="btn" aria-hidden="true">Cancelar</button>
 			</div>
 		</div>
+		
 		<button type="submit" class="btn btn-primary">Guardar</button>
+		<a href="#salir" class="btn" role="button" data-toggle="modal">Cancelar</a>
+		
+		<div class="modal hide fade" id="salir" tabindex = "-1" role="dialog" aria-labelledby="nuevoInteresLabel" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">¿Seguro que deseas cancelar? Se perderán todos los datos</h3>
+			</div>
+			<div class="modal-footer">
+				<button data-dismiss="modal" class="btn btn-primary" aria-hidden="true">Seguir en la página</button>
+				<a href="/main/" role="button" class="btn" >Salir</a>
+			</div>
+		</div>
+		
 		
 		
 		
