--- a/proyecto_voluntariado/template/main.html
+++ b/proyecto_voluntariado/template/main.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block panel %}
-<li class="active"><a href="/">Inicio</a></li>
+<li class="active"><a href="/main/">Inicio</a></li>
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Regístrate<b class="caret"></b>
 	</a>
