--- a/proyecto_voluntariado/template/new_org.html
+++ b/proyecto_voluntariado/template/new_org.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 {% block panel %}
 <li class="active"><a href="/main/">Inicio</a></li>
-<li><a href="../contact/">Contacto</a></li>
-<li><a href="../about/">Acerca de</a></li>
+<li><a href="/contact/">Contacto</a></li>
+<li><a href="/about/">Acerca de</a></li>
 {% endblock %}
 
 {% block principal %}
