--- a/proyecto_voluntariado/template/home_empresa.html
+++ b/proyecto_voluntariado/template/home_empresa.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block panel %}
-<li class="active"><a href="#">Inicio</a></li>
+<li class="active"><a href="/main/">Inicio</a></li>
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Buscar<b class="caret"></b>
 	</a>
@@ -26,7 +26,8 @@
 			<h2>{{ ong.nombre }}</h2>
 			<p>{{ ong.descripcion }}</p>
 			<p><b>Objetivos:</b><br>{{ ong.objetivos }}</p>
-			<a href="/editarong/">Editar perfil</a>
+			<p><a href="/editarong/">Editar perfil</a></p>
+			<p><a href="/empresa/{{ong.user.id}}/buscar_empleo/">Buscar Proyectos de Interés</a></p>
 		</div>
 		<div class="span10">
 			<h1>Especialidades</h1>
