--- a/proyecto_voluntariado/template/home_ong.html
+++ b/proyecto_voluntariado/template/home_ong.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block panel %}
-<li class="active"><a href="#">Inicio</a></li>
+<li class="active"><a href="/main/">Inicio</a></li>
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Buscar<b class="caret"></b>
 	</a>
@@ -82,6 +82,10 @@
 				{% endfor %}
 				</tbody>
 			</table>
+			
+			{% if not ong.es_empresa %}
+			<input value="Agregar proyecto" onClick="location.href='nuevoproyecto'" type="button" class="btn btn-primary">
+			{% endif %}
 		</div>
 	</div>
 </div>
