--- a/proyecto_voluntariado/template/index.html
+++ b/proyecto_voluntariado/template/index.html
@@ -41,7 +41,21 @@
           <a class="brand" href="/"> <img src="{{MEDIA_URL}}img/logo.png" style="height: 40px;"/> </a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-				{% block panel %}{% endblock %}
+				{% block panel %}
+				<li class="active"><a href="/main/">Inicio</a></li>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Regístrate<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+					<li><a href="/nuevovoluntario/" >Voluntario</a></li>
+					<li><a href="/nuevaorg/" >Organización</a></li>
+					<li><a href="/nuevaempresa/" >Empresa Privada</a></li>
+					</ul>
+				</li>
+				<li><a href="/contact/">Contacto</a></li>
+				<li><a href="/about/">Acerca de</a></li>
+
+				{% endblock %}
             </ul>
             {% block signin %}{% endblock %}
           </div><!--/.nav-collapse -->
