Agregada vista para solicitar participación a empresa en un puesto determinado.

--- a/proyecto_voluntariado/template/match_search.html
+++ b/proyecto_voluntariado/template/match_search.html
@@ -84,7 +84,7 @@
 						<tbody>
 							{% for empresa in lista2 %}
 							<tr>
-								<td><a href="../../../empresa/{{empresa.user.id}}/">{{empresa.nombre}}</a></td>
+								<td><a href="../empresa/{{empresa.user.id}}/">{{empresa.nombre}}</a></td>
 								<td>{{empresa.nombre_representante}} {{empresa.apellido_representante}}</td>
 							</tr>
 							{% endfor %}
