Cambios varios. Revisando que no existan links muertos.

--- a/proyecto_voluntariado/template/home_volunteer.html
+++ b/proyecto_voluntariado/template/home_volunteer.html
@@ -2,6 +2,7 @@
 
 {% block panel %}
 <li class="active"><a href="/main/">Inicio</a></li>
+<!--
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Buscar<b class="caret"></b>
 	</a>
@@ -10,8 +11,9 @@
 	<li><a href="/buscar/empresas" >Empresas</a></li>
 	</ul>
 </li>
-<li><a href="/contact/">Contacto</a></li>
+-->
 <li><a href="/about/">Acerca de</a></li>
+<li><a href="/contact/">Contáctanos</a></li>
 <li><p>{{vol.nombre}}</p></li>
 <li><a href="/logout/">Cerrar sesión</a></li>
 
