--- a/proyecto_voluntariado/template/volunteer_profile.html
+++ b/proyecto_voluntariado/template/volunteer_profile.html
@@ -2,69 +2,88 @@
 
 {% block principal %}
 <div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span2">
-      <!--Sidebar content-->
-      <img src="{{MEDIA_URL}}{{vol.foto}}" width="100px;"/>
-      <h2>{{ vol.nombres }}, {{vol.apellidos}}</h2>
-      <p><strong> Edad :</strong>{{ current }}</p>
-    </div>
-    <div class="span10">
-      <h1>Especialidades</h1>
-      <table class="table table-striped">
-		  <thead>
-			  <tr>
-				  <th>Especialidad</th>
-				  <th>Descripción</th>
-			  </tr>
-		  </thead>
-		  <tbody>
-			{% for i in vol.especialidades.all %}
-			<tr>
-				<td>{{ i.nombre }}</td>
-				<td>{{ i.descripcion }}</td>
-			</tr>
-			{% endfor %}
-		  </tbody>
-      </table>
-      <h1>Favoritos</h1>
-      <table class="table table-striped">
-		  <thead>
-			  <tr>
-				  <th>Favorito</th>
-				  <th>Descripción</th>
-			  </tr>
-		  </thead>
-		  <tbody>
-			{% for i in vol.favoritos.all %}
-			<tr>
-				<td>{{ i.nombre }}</td>
-				<td>{{ i.descripcion }}</td>
-			</tr>
-			{% endfor %}
-		  </tbody>
-      </table>
-      
-      <h2>Puestos actuales</h2>
-      <table class="table table-striped">
-		  <thead>
-			  <tr>
-				  <th>Organizacion</th>
-				  <th>Proyecto</th>
-				  <th>Puesto</th>
-			  </tr>
-		  </thead>
-		  <tbody>
-			  {% for i in vol.puestos.all %}
-			  <tr>
-				  <td>{{ i.proyecto.organizacion.nombre }}</td>
-				  <td>{{ i.proyecto.descripcion}}</td>
-				  <td>{{ i.descripcion }}</td>
-			  </tr>
-			  {% endfor %}
-		  </tbody>
-      </table>
-    </div>
-  </div>
+	<div class="row-fluid">
+		<div class="span2">
+		<img src="{{MEDIA_URL}}{{vol.foto}}" width="100px;"/>
+		<h2>{{ vol.nombres }}, {{vol.apellidos}}</h2>
+		<p><strong> Edad :</strong>{{ current }}</p>
+	</div>
+	<div class="span10">
+		<h1>Especialidades</h1>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Especialidad</th>
+					<th>Descripción</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for i in vol.especialidades.all %}
+					<tr>
+						<td>{{ i.nombre }}</td>
+						<td>{{ i.descripcion }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<h1>Favoritos</h1>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Favorito</th>
+					<th>Descripción</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for i in vol.favoritos.all %}
+					<tr>
+						<td>{{ i.nombre }}</td>
+						<td>{{ i.descripcion }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		
+		<h2>Puestos actuales</h2>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Organizacion</th>
+					<th>Proyecto</th>
+					<th>Puesto</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for i in vol.puestos.all %}
+					<tr>
+						<td>{{ i.proyecto.organizacion.nombre }}</td>
+						<td>{{ i.proyecto.descripcion}}</td>
+						<td>{{ i.descripcion }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		
+		<h2>Solicitudes recibidas</h2>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Organizacion</th>
+					<th>Proyecto</th>
+					<th>Puesto</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for i in vol.puestos.all %}
+					<tr>
+						<td>{{ i.proyecto.organizacion.nombre }}</td>
+						<td>{{ i.proyecto.descripcion}}</td>
+						<td>{{ i.descripcion }}</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		
+	</div>
 </div>
 {% endblock %}
