Funcionamiento correcto de enlaces en voluntario. Cambio de url para hacer busquedas.

--- a/proyecto_voluntariado/template/home_volunteer.html
+++ b/proyecto_voluntariado/template/home_volunteer.html
@@ -51,7 +51,7 @@
 				  {% endfor %}
 			  </tbody>
 		  </table>
-			<a href="/voluntario/{{vol.user.id}}/buscar_empleo/">Encuentra proyectos</a>
+			<a href="buscar_empleo/">Encuentra nuevos puestos</a>
 		</div>
       <h2>Especialidades</h2>
       <table class="table table-striped">
