--- a/proyecto_voluntariado/template/puesto_voluntario.html
+++ b/proyecto_voluntariado/template/puesto_voluntario.html
@@ -46,7 +46,7 @@
                                         </tr>
                                 </tbody>
                         </table>
-                        
+                <input value="Regresar" onClick="location.href='/home/voluntario/buscar_empleo/'" type="button" class="btn btn-primary">
                 </div>
                 <div class="span4">
                         <h1>Acciones</h1>
@@ -73,6 +73,5 @@
                         
                 </div>
         </div>
-        <input value="Regresar" onClick="location.href='../../proyecto/{{puesto.proyecto.id}}'" type="button" class="btn btn-primary">
 </div>
 {% endblock %}
