Funcionamiento correcto de enlaces en ong. Revisados los enlaces entre páginas de ong. Pendiente revisar que esté autenticado en algunas vistas.

--- a/proyecto_voluntariado/template/home_volunteer.html
+++ b/proyecto_voluntariado/template/home_volunteer.html
@@ -14,7 +14,7 @@
 -->
 <li><a href="/about/">Acerca de</a></li>
 <li><a href="/contact/">Contáctanos</a></li>
-<li><p>{{vol.nombre}}</p></li>
+<li><p>{{vol.nombres}}</p></li>
 <li><a href="/logout/">Cerrar sesión</a></li>
 
 {% endblock %}
