--- a/proyecto_voluntariado/template/home_ong.html
+++ b/proyecto_voluntariado/template/home_ong.html
@@ -1,19 +1,11 @@
 {% extends 'index.html' %}
-{% block panel %}
-<li class="active"><a href="/main/">Inicio</a></li>
-<li class="dropdown">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Buscar<b class="caret"></b>
-	</a>
-	<ul class="dropdown-menu">
-	<li><a href="/buscar/organizaciones" >Organizaciones</a></li>
-	<li><a href="/buscar/empresas" >Empresas</a></li>
-	</ul>
-</li>
-<li><a href="/contact/">Contacto</a></li>
-<li><a href="/about/">Acerca de</a></li>
-<li><p>{{ong.nombre}}</p></li>
-<li><a href="/logout/">Cerrar sesión</a></li>
 
+{% block panel %}
+	<li class="active"><a href="/main/">Inicio</a></li>
+	<li><a href="/about/">Acerca de</a></li>
+	<li><a href="/contact/">Contáctanos</a></li>
+	<li><p>{{ong.nombre}}</p></li>
+	<li><a href="/logout/">Cerrar sesión</a></li>
 {% endblock %}
 
 
