--- a/proyecto_voluntariado/template/nuevo_proyecto.html
+++ b/proyecto_voluntariado/template/nuevo_proyecto.html
@@ -7,6 +7,14 @@
 	</style>
 {% endblock %}
 
+{% block panel %}
+	<li class="active"><a href="/main/">Inicio</a></li>
+	<li><a href="/about/">Acerca de</a></li>
+	<li><a href="/contact/">Contáctanos</a></li>
+	<li><p>{{ong.nombre}}</p></li>
+	<li><a href="/logout/">Cerrar sesión</a></li>
+{% endblock %}
+
 {% block principal %}
 	<div class="hero-unit">
 		<h2>Ingreso de nuevo proyecto</h2><br>
