--- a/proyecto_voluntariado/template/puesto.html
+++ b/proyecto_voluntariado/template/puesto.html
@@ -1,6 +1,14 @@
 {% extends 'index.html' %}
 {% load dictionary_extras %}
 
+{% block panel %}
+	<li class="active"><a href="/main/">Inicio</a></li>
+	<li><a href="/about/">Acerca de</a></li>
+	<li><a href="/contact/">Contáctanos</a></li>
+	<li><p>{{puesto.proyecto.organizacion.nombre}}</p></li>
+	<li><a href="/logout/">Cerrar sesión</a></li>
+{% endblock %}
+
 {% block principal %}
 <div class="container-fluid">
 	
