--- a/proyecto_voluntariado/template/new_volunteer.html
+++ b/proyecto_voluntariado/template/new_volunteer.html
@@ -45,7 +45,7 @@
 		<div class="modal hide fade" id="salir" tabindex = "-1" role="dialog" aria-labelledby="nuevoInteresLabel" aria-hidden="true">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h3 id="myModalLabel">¿Seguro que deseas cancelar? Se perderán todos los datos</h3>
+				<h3 id="myModalLabel">¿Seguro que deseas cancelar? Se perderán todos los datos que no se han guardado anteriormente</h3>
 			</div>
 			<div class="modal-footer">
 				<button data-dismiss="modal" class="btn btn-primary" aria-hidden="true">Seguir en la página</button>
